--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       body {
         padding: 1.5rem;
         font-family: system-ui;
-        color: hsl(0, 5%, 60%);
+        color: black;
       }
 
       button {
